--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ steps:
 - task: DownloadGitHubRelease@0
   displayName: 'Download Pengwin rootfs images to working folder'
   inputs:
-    connection: 'github connection'
+    connection: 'Github Connection'
     userRepository: 'WhitewaterFoundry/pengwin-rootfs-builds'
     itemPattern: '*.tar.gz'
     downloadPath: '$(System.DefaultWorkingDirectory)'
