--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,9 @@ trigger:
 pool:
   vmImage: 'windows-latest'
 
+variables:
+- group: 'StoreKey'
+
 steps:
 - script: |
    echo 'Clone Pengwin repository azure_pipelines branch'
@@ -33,14 +36,15 @@ steps:
     secureFile: StoreKey.pfx
 
 - powershell: |
-   $PfxFilePath= $Env:PFXFILE
+   $PfxFilePath = $Env:PFXFILE
+   $PfxPassword = $Env:PASSWORD
    
    $absolutePfxFilePath = Resolve-Path -Path $PfxFilePath
    Write-Output "Importing store certificate '$absolutePfxFilePath'..."
    
    Add-Type -AssemblyName System.Security
    $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
-   $cert.Import($absolutePfxFilePath, $Env:PASSWORD, [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]"PersistKeySet")
+   $cert.Import($absolutePfxFilePath, $PfxPassword, [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]"PersistKeySet")
    $store = new-object system.security.cryptography.X509Certificates.X509Store -argumentlist "MY", CurrentUser
    $store.Open([System.Security.Cryptography.X509Certificates.OpenFlags]::"ReadWrite")
    $store.Add($cert)
